syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/chance.proto";

// TODO: this seems useless. There is already animation for showing chance chest
// open/close.
// type : "announce_received_chance"
// packet_type : DEFAULT
message AnnounceRecievedChancePayload {
  string player = 1;
  Chance chance = 2;
}